public interface GeometrikSekil {
    double getAlan();
    double getCevre();
}

